11/04/2020:
- changed table 'vendors_services' to 'services'
- added 'is_customer_view_enabled' column as 'boolean' to 'vendors' table


18/04/2020:
- added 'private_stripe_customer_id' to 'vendors'
- added 'package_id' to 'vendors'

23/04/2020:
- changed 'is_archived' to 'is_deleted' in 'vendors_users'
- changed 'private_stripe_customer_id' to 'root_stripe_customer_id' in 'vendors_users'
- added 'stripe_monthly_plan_id' to 'packages'
- added 'stripe_annual_pan_id' to 'packages'

26/04/2020:
- created table 'billing_subscriptions'
- created table 'billing_subscriptions_log'